--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <body>
     <h1>It is my web page!!!</h1>
 Hello there, awesome person!
+    <img scr="https://avatars.githubusercontent.com/u/85897483?v=4">
   </body>
 </html>
   
